--- a/index.html
+++ b/index.html
@@ -285,11 +285,153 @@
 
     </div>
 
-    <main>
-        <!-- all videos -->
+<!-- all videos -->
+    <main class="feed">
+        <div class="feed__item">
+            <div class="feed__item__thumbnil"></div>
+            <div class="feed__item__info">
+                <div class="feed__item__info__avatar"></div>
+                <div>
+                    <h3>Some video title</h3>
+                    <a href="#">Channel name</a>
+                    <p>5.5k views &middot; 3 hours ago</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="feed__item">
+            <div class="feed__item__thumbnil"></div>
+            <div class="feed__item__info">
+                <div class="feed__item__info__avatar"></div>
+                <div>
+                    <h3>Some video title</h3>
+                    <a href="#">Channel name</a>
+                    <p>5.5k views &middot; 3 hours ago</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="feed__item">
+            <div class="feed__item__thumbnil"></div>
+            <div class="feed__item__info">
+                <div class="feed__item__info__avatar"></div>
+                <div>
+                    <h3>Some video title</h3>
+                    <a href="#">Channel name</a>
+                    <p>5.5k views &middot; 3 hours ago</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="feed__item">
+            <div class="feed__item__thumbnil"></div>
+            <div class="feed__item__info">
+                <div class="feed__item__info__avatar"></div>
+                <div>
+                    <h3>Some video title</h3>
+                    <a href="#">Channel name</a>
+                    <p>5.5k views &middot; 3 hours ago</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="feed__item">
+            <div class="feed__item__thumbnil"></div>
+            <div class="feed__item__info">
+                <div class="feed__item__info__avatar"></div>
+                <div>
+                    <h3>Some video title</h3>
+                    <a href="#">Channel name</a>
+                    <p>5.5k views &middot; 3 hours ago</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="feed__item">
+            <div class="feed__item__thumbnil"></div>
+            <div class="feed__item__info">
+                <div class="feed__item__info__avatar"></div>
+                <div>
+                    <h3>Some video title</h3>
+                    <a href="#">Channel name</a>
+                    <p>5.5k views &middot; 3 hours ago</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="feed__item">
+            <div class="feed__item__thumbnil"></div>
+            <div class="feed__item__info">
+                <div class="feed__item__info__avatar"></div>
+                <div>
+                    <h3>Some video title</h3>
+                    <a href="#">Channel name</a>
+                    <p>5.5k views &middot; 3 hours ago</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="feed__item">
+            <div class="feed__item__thumbnil"></div>
+            <div class="feed__item__info">
+                <div class="feed__item__info__avatar"></div>
+                <div>
+                    <h3>Some video title</h3>
+                    <a href="#">Channel name</a>
+                    <p>5.5k views &middot; 3 hours ago</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="feed__item">
+            <div class="feed__item__thumbnil"></div>
+            <div class="feed__item__info">
+                <div class="feed__item__info__avatar"></div>
+                <div>
+                    <h3>Some video title</h3>
+                    <a href="#">Channel name</a>
+                    <p>5.5k views &middot; 3 hours ago</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="feed__item">
+            <div class="feed__item__thumbnil"></div>
+            <div class="feed__item__info">
+                <div class="feed__item__info__avatar"></div>
+                <div>
+                    <h3>Some video title</h3>
+                    <a href="#">Channel name</a>
+                    <p>5.5k views &middot; 3 hours ago</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="feed__item">
+            <div class="feed__item__thumbnil"></div>
+            <div class="feed__item__info">
+                <div class="feed__item__info__avatar"></div>
+                <div>
+                    <h3>Some video title</h3>
+                    <a href="#">Channel name</a>
+                    <p>5.5k views &middot; 3 hours ago</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="feed__item">
+            <div class="feed__item__thumbnil"></div>
+            <div class="feed__item__info">
+                <div class="feed__item__info__avatar"></div>
+                <div>
+                    <h3>Some video title</h3>
+                    <a href="#">Channel name</a>
+                    <p>5.5k views &middot; 3 hours ago</p>
+                </div>
+            </div>
+        </div>
+        
     </main>
-
-
 
 </body>
 </html>
